--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@
 # Python egg metadata, regenerated from source files by setuptools.
 /*.egg-info
 /*.egg
+
+# Sublime project file
+*.sublime*
+
+# remove cache files
+/*__pycache__
